cabal-version: 2.2
version:       0.0
name:          help
category:      Application

library
  default-language:
      Haskell2010
  hs-source-dirs:
      .
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-unused-imports
  build-depends:
      base
    , lens
    , mtl
    , optparse-applicative
    , rio
    , unliftio

  exposed-modules:
      Confused
